# AstrA

./: .gitignore  AstrA.code-workspace  LICENCE  indra-astra.code-workspace
parsers/indra-astra/: Cargo.toml  config.toml  rustc-ice-2024-02-01T21_52_53-29872.txt  rustc-ice-2024-02-01T21_57_40-28244.txt
parsers/indra-astra/.temp/: willumz.generic-pseudocode-1.4.1.vsix
parsers/indra-astra/src/: bin.rs  lib.rs  main.rs
parsers/indra-astra/src/colors/: mod.rs
parsers/indra-astra/src/lexer/: context.rs  cursor.rs  fs.rs  mod.rs  parser.rs
parsers/indra-astra/src/lexer/parsers/: mod.rs
parsers/indra-astra/src/lexer/parsers/attribute/: mod.rs  tag.rs
parsers/indra-astra/src/lexer/parsers/source/: command.rs  mod.rs
parsers/indra-astra/src/lexer/parsers/statement/: branch.rs  mod.rs
parsers/indra-astra/src/lexer/parsers/symbol/: mod.rs
parsers/indra-astra/src/lexer/results/: builder.rs  end.rs  error.rs  error_builder.rs  mod.rs  node.rs  parsed.rs  span.rs  token.rs  token_builder.rs
parsers/indra-astra/src/parser/: cursor.rs  fs.rs  mod.rs  rule.rs
parsers/indra-astra/src/parser/colors/: mod.rs
parsers/indra-astra/src/parser/results/: builder.rs  end.rs  error.rs  error_builder.rs  match.rs  mod.rs  node.rs  parsed.rs  span.rs  token.rs  token_builder.rs
parsers/indra-astra/src/parser/tokens/: mod.rs
parsers/indra-astra/src/parser/tokens/source/: mod.rs  (+1 more)
parsers/indra-astra/src/runtime/: cell.rs  cell.rs.2.old  cell.rs.old  mod.rs  node.rs  project.rs  project.rs.old  rfr.rs  scope.rs
parsers/indra-astra/src/runtime/nodes/: attributes.rs  entries.rs  mod.rs  prj.rs  procs.rs  structs.rs
parsers/indra-astra/src/utils/: ansi.rs  log.rs  logs.rs  mod.rs  sexp.rs
parsers/indra-astra/tests/parsers/: tag.md
(+306 files in other folders)
