[features]
default = []
log = []
verbose = ["v", "log"]
v = ["log", "verbose"]
vv = ["log", "verbose", "v"]
vvv = ["log", "verbose", "v", "vv"]

[package]
name = "indra-astra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = "2.1.0"
lazy_static = "1.4.0"
regex = "1.10.2"
meep-tech-log = { path = "../../../../libs/utils/rust/meep-tech-log" }
